--- a/offchain-modules/tests/e2e/src/version.html
+++ b/offchain-modules/tests/e2e/src/version.html
@@ -5,39 +5,38 @@
   <div> value: <span id="ret"></span></div>
   </div>
 </body>
-<script>
-  // import { goto } from './goto.js';
-  // const goto = require('./goto.js');
+
+<!-- <script type="module">   -->
+<script>  
+  // import  goto from './goto.js';
+  // const url = goto.urls.watcherLocal;
+  const url = "http://127.0.0.1:3060/force-bridge/api/v1";
   document.getElementById("btn").addEventListener("click", () => {
+  var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance 
+  xmlhttp.open("POST", url);
+  xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+  const p1 = "version";
+  const p2 = 10;
 
-     var url = 'http://127.0.0.1:3060/force-bridge/api/v1';
-    // var url = 'https://testnet.forcebridge.com/api/force-bridge/api/v1';
-    // var url = goto.urls.watcherLocal;
-    var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance 
-    xmlhttp.open("POST", url);
-    xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-    const p1 = "version"; 
-    const p2 = 10; 
-
-    xmlhttp.send(JSON.stringify({
-      "jsonrpc": "2.0",
-      "method": p1,
-      "id": p2,
-    }));
+  xmlhttp.send(JSON.stringify({
+    "jsonrpc": "2.0",
+    "method": p1,
+    "id": p2,
+  }));
     
-    //监听事件
-    xmlhttp.onreadystatechange = function () {
-        if(xmlhttp.readyState === 4&&xmlhttp.status === 200)
-        {
-            console.log(xmlhttp.responseText);
-            // document.getElementById("ret").innerHTML = JSON.stringify(xmlhttp.responseText);
-            document.getElementById("ret").innerHTML = xmlhttp.responseText;
-        }
-        if (xmlhttp.status === 400) {
-            console.log(xmlhttp.responseText)
-            // document.getElementById("ret").innerHTML = JSON.stringify(xmlhttp.responseText);
-            document.getElementById("ret").innerHTML = xmlhttp.responseText;
-        }
+  //监听事件
+  xmlhttp.onreadystatechange = function () {
+      if(xmlhttp.readyState === 4&&xmlhttp.status === 200)
+      {
+          console.log(xmlhttp.responseText);
+          // document.getElementById("ret").innerHTML = JSON.stringify(xmlhttp.responseText);
+          document.getElementById("ret").innerHTML = xmlhttp.responseText;
+      }
+      if (xmlhttp.status === 400) {
+          console.log(xmlhttp.responseText)
+          // document.getElementById("ret").innerHTML = JSON.stringify(xmlhttp.responseText);
+          document.getElementById("ret").innerHTML = xmlhttp.responseText;
+      }
     }
   });
 
@@ -48,12 +47,3 @@
 </html>
 
 
-
-
-<!-- 
-{
-  "jsonrpc": "2.0",
-  "method": "version",
-  "id": 10
-}
- -->
